delete graalVm configuration, add maven spring boot plugin configuration